<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HoMiLightGreen"
    tools:context=".Fragments.HomeFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringAnimals"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/animalRowEarNumberHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/animalRowIdHeader"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/HoMiLightGreenHighlight"
        android:text="@string/StringId"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/animalRowEarNumberHeader"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/HoMiOrangeStrong"
        android:text="@string/StringEarMarkNumber"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/animalRowIdHeader"
        app:layout_constraintStart_toEndOf="@+id/animalRowIdHeader" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/StringSearchfield"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeList" />

    <TextView
        android:id="@+id/animalStableNumberHeader"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/HoMiLightGreenHighlight"
        android:text="@string/StringStableNumber"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/animalRowEarNumberHeader"
        app:layout_constraintTop_toTopOf="@+id/animalRowEarNumberHeader" />

    <EditText
        android:id="@+id/EtHomeUserInput"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ListView
        android:id="@+id/homeList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        android:divider="@color/HoMiDarkGreenDeep"
        android:dividerHeight="1dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="@+id/animalStableNumberHeader"
        app:layout_constraintStart_toStartOf="@+id/animalRowIdHeader"
        app:layout_constraintTop_toBottomOf="@+id/animalRowEarNumberHeader" />

    <View
        android:id="@+id/view"
        android:layout_width="5dp"
        android:layout_height="65dp"
        android:background="@color/HoMiDarkGreenDeep"
        app:layout_constraintBottom_toBottomOf="@+id/EtHomeUserInput"
        app:layout_constraintEnd_toStartOf="@+id/EtHomeUserInput" />

    <View
        android:id="@+id/view2"
        android:layout_width="5dp"
        android:layout_height="65dp"
        android:background="@color/HoMiDarkGreenDeep"
        app:layout_constraintStart_toEndOf="@+id/EtHomeUserInput"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view3"
        android:layout_width="210dp"
        android:layout_height="5dp"
        android:background="@color/HoMiDarkGreenDeep"
        app:layout_constraintBottom_toTopOf="@+id/EtHomeUserInput"
        app:layout_constraintStart_toStartOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>