<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HoMiLightGreen" android:maxHeight="400dp">


    <TextView
        android:id="@+id/TvEditHeader"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/StringUnknownValue"/>

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/HoMiDarkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/HoMiDarkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/HoMiDarkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/HoMiDarkGreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/TvEditValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/TvEditHeader"
        app:layout_constraintTop_toBottomOf="@+id/TvEditHeader"
        android:hint="@string/StringUnknownValue"/>

    <Button
        android:id="@+id/ButtonEditAccept"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/StringAccept"
        app:layout_constraintStart_toStartOf="@+id/TvEditValue"
        app:layout_constraintTop_toBottomOf="@+id/TvEditValue" />

    <Button
        android:id="@+id/ButtonEditCancel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/StringCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ButtonEditAccept"
        app:layout_constraintTop_toBottomOf="@+id/TvEditValue" />

</androidx.constraintlayout.widget.ConstraintLayout>